Removed remaining warnings